@@ -25,6 +25,9 @@ GNU coreutils NEWS                                    -*- outline -*-
   factor again outputs immediately when numbers are input interactively.
   [bug introduced in coreutils-8.24]
 
+  ls --time-style no longer mishandles '%%b' in formats.
+  [bug introduced in coreutils-7.2]
+
   nl now resets numbering for each page section rather than just for each page.
   [This bug was present in "the beginning".]
 
